apps/calidum-rotae/base/discord-provider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-provider
  annotations:
    kube-score/ignore: pod-networkpolicy, pod-probes-identical
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discord-provider
  template:
    metadata:
      labels:
        app: discord-provider
    spec:
      containers:
        - name: discord-provider
          image: ghcr.io/clubcedille/discord-provider:1.0.2
          imagePullPolicy: Always
          command:
            ['/bin/sh', '-c', '/discord_provider --port 5000']
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 500m
              memory: 256Mi
              ephemeral-storage: 1Gi
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - discord-provider
              topologyKey: "kubernetes.io/hostname"
