apps/calidum-rotae/base/discord-provider/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-provider-service
  namespace: calidum-rotae
spec:
  selector:
    app: discord-provider
  clusterIP: None
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
