apps/calidum-rotae/base/discord-provider/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-discord-provider
spec:
  podSelector:
    matchLabels:
      app: discord-provider
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
  egress:
    - to: []
